<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context="com.kotlinsqlitedatabase.ui.UserDetailsInputFragment">
    <EditText android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:padding="10dp"
              android:id="@+id/user_name"
              android:inputType="textCapWords"
              android:hint="@string/user_name"/>
    <EditText android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:padding="10dp"
              android:id="@+id/user_address"
              android:inputType="text"
              android:hint="@string/user_address"/>
    <EditText android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:padding="10dp"
              android:id="@+id/user_phone"
              android:inputType="number"
              android:hint="@string/user_mobile"/>

    <Button android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/save_btn"
            android:padding="10dp"
            android:text="@string/save"/>

</LinearLayout>
