<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
            android:id="@+id/fab_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:orientation="horizontal">
        <TextView android:layout_width="wrap_content"
                  android:layout_height="match_parent"
                  android:paddingRight="5dp"
                  android:textAppearance="?android:textAppearanceLarge"
                  android:textStyle="italic"
                  android:gravity="center"
                  android:textColor="#444444"
                  android:text="@string/update_delete"/>
        <android.support.design.widget.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="23dp"
                app:fabSize="mini"
                app:backgroundTint="@color/colorPrimary"
                android:rotation="90"
                android:layout_marginBottom="10dp"
                app:srcCompat="@android:drawable/ic_input_delete"/>
    </LinearLayout>
    <LinearLayout
            android:id="@+id/fab_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:orientation="horizontal">
        <TextView android:layout_width="wrap_content"
                  android:layout_height="match_parent"
                  android:paddingRight="5dp"
                  android:textAppearance="?android:textAppearanceLarge"
                  android:gravity="center"
                  android:textColor="#444444"
                  android:textStyle="italic"
                  android:text="@string/update_data"/>
        <android.support.design.widget.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="23dp"
                app:fabSize="mini"
                app:backgroundTint="@color/colorPrimary"
                android:rotation="90"
                android:layout_marginBottom="10dp"
                app:srcCompat="@android:drawable/ic_menu_edit"/>
    </LinearLayout>
    <LinearLayout
            android:id="@+id/fab_create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:orientation="horizontal">
        <TextView android:layout_width="wrap_content"
                  android:layout_height="match_parent"
                  android:paddingRight="5dp"
                  android:gravity="center"
                  android:textColor="#444444"
                  android:textStyle="italic"
                  android:textAppearance="?android:textAppearanceLarge"
                  android:text="@string/add_data"/>
        <android.support.design.widget.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="23dp"
                app:fabSize="mini"
                android:rotation="90"
                app:backgroundTint="@color/colorPrimary"
                android:layout_marginBottom="10dp"
                app:srcCompat="@android:drawable/ic_menu_add"/>
    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_gravity="right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:backgroundTint="@color/colorPrimary"
            android:layout_marginRight="@dimen/fab_margin"
            android:layout_marginBottom="@dimen/fab_margin"
            app:srcCompat="@android:drawable/ic_input_add"
            app:fabSize="normal"/>

</LinearLayout>